@@ -1,16 +1,19 @@
 package com.saphamrah.customer.presentation.createRequest.filter.view.adapter;
 
+import static com.saphamrah.customer.utils.Constants.FILTER;
 import static com.saphamrah.customer.utils.Constants.FILTER_LIST;
 import static com.saphamrah.customer.utils.Constants.FILTER_SLIDER;
 import static com.saphamrah.customer.utils.Constants.SORT;
 
 import android.content.Context;
 import android.os.Build;
+import android.util.Log;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
 import android.widget.CompoundButton;
 import android.widget.ImageView;
+import android.widget.LinearLayout;
 import android.widget.TextView;
 
 import androidx.annotation.NonNull;
@@ -27,42 +30,43 @@ import com.saphamrah.customer.presentation.createRequest.filter.view.adapter.Fil
 import com.saphamrah.customer.utils.AdapterUtil.AdapterAction;
 import com.saphamrah.customer.utils.AdapterUtil.AdapterItemListener;
 import com.saphamrah.customer.utils.AnimationUtils;
+import com.saphamrah.customer.utils.Constants;
+import com.saphamrah.customer.utils.customViews.PersianRangeSlider;
+
+import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
+
+import io.reactivex.Observable;
+import io.reactivex.functions.Predicate;
 
 public class FilterChoiceAdapter extends RecyclerView.Adapter<RecyclerView.ViewHolder> {
     private Context context;
-    private List<FilterSortModel> models;
     private List<FilterSortModel> allFilters;
     private AdapterItemListener<FilterSortModel> listener;
-    private int filterSortType;
-    private int prevSelection  = -1;
+
+    List<FilterSortModel> parentListWithSlider;
 
 
-    public FilterChoiceAdapter(int filterSortType, Context context, List<FilterSortModel> filterGlobal, List<FilterSortModel> models, AdapterItemListener<FilterSortModel> listener) {
-        this.filterSortType = filterSortType;
+
+    public FilterChoiceAdapter( Context context, List<FilterSortModel> filterGlobal,  AdapterItemListener<FilterSortModel> listener) {
         this.context = context;
-        this.models = models;
         this.listener = listener;
         this.allFilters = filterGlobal;
+        this.parentListWithSlider = Observable.fromIterable(allFilters).filter(filterSortModel -> filterSortModel.getParent_id() == 0 && filterSortModel.getType() == 2 && filterSortModel.getFilterType() == 3 || filterSortModel.getType() == 2 && filterSortModel.getFilterType() == 4).toList().blockingGet();
     }
 
-    @RequiresApi(api = Build.VERSION_CODES.N)
     @NonNull
     @Override
     public RecyclerView.ViewHolder onCreateViewHolder(@NonNull ViewGroup parent, int viewType) {
 
-        if (viewType == SORT) {
-            View view1 = LayoutInflater.from(parent.getContext()).inflate(R.layout.sort_choice_list_itemview, parent, false);
-            return new ViewHolderSortList(view1);
-        } else if (viewType == FILTER_LIST) {
+
+
+
+        if (viewType == FILTER_LIST) {
             View view2 = LayoutInflater.from(parent.getContext()).inflate(R.layout.filter_choice_itemview, parent, false);
             return new ViewHolderFilter(view2);
-        } else if (viewType == FILTER_SLIDER) {
-            View view2 = LayoutInflater.from(parent.getContext()).inflate(R.layout.filter_choice_slider_itemview, parent, false);
-            return new ViewHolderFilterSlider(view2);
         } else {
             View view2 = LayoutInflater.from(parent.getContext()).inflate(R.layout.filter_choice_slider_itemview, parent, false);
             return new ViewHolderFilterSlider(view2);
@@ -73,43 +77,34 @@ public class FilterChoiceAdapter extends RecyclerView.Adapter<RecyclerView.ViewH
 
     @Override
     public int getItemViewType(int position) {
-        if (filterSortType == 1) {
-            return SORT;
-        } else {
-            return models.get(position).getType();
-        }
+        return parentListWithSlider.get(position).getFilterType();
     }
 
-    @RequiresApi(api = Build.VERSION_CODES.N)
     @Override
     public void onBindViewHolder(@NonNull RecyclerView.ViewHolder holder, int position) {
-        FilterSortModel filterModel = models.get(position);
-
+        FilterSortModel filterModel = parentListWithSlider.get(position);
 
         switch (holder.getItemViewType()) {
-            case SORT:
-                ViewHolderSortList viewHolderSort = (ViewHolderSortList) holder;
-                viewHolderSort.bind(models, filterModel, position);
-                break;
 
             case FILTER_LIST:
-                ViewHolderFilter viewHolderFilter = (ViewHolderFilter) holder;
-                viewHolderFilter.bind(filterModel);
+                if (filterModel.getParent_id() == 0) {
+                    ViewHolderFilter viewHolderFilter = (ViewHolderFilter) holder;
+                    viewHolderFilter.bind(filterModel);
+                }
                 break;
-
             case FILTER_SLIDER:
+
                 ViewHolderFilterSlider viewHolderFilterSlider = (ViewHolderFilterSlider) holder;
                 viewHolderFilterSlider.bind(filterModel);
                 break;
         }
-
 
     }
 
 
     @Override
     public int getItemCount() {
-        return models.size();
+        return parentListWithSlider.size();
     }
 
 
@@ -117,54 +112,14 @@ public class FilterChoiceAdapter extends RecyclerView.Adapter<RecyclerView.ViewH
         return allFilters;
     }
 
-    public class ViewHolderSortList extends RecyclerView.ViewHolder {
-        private MaterialCheckBox materialCheckBox;
 
-
-        @RequiresApi(api = Build.VERSION_CODES.N)
-        public ViewHolderSortList(View view) {
-            super(view);
-            materialCheckBox = view.getRootView().findViewById(R.id.S_sort_choice);
-
-        }
-
-        @RequiresApi(api = Build.VERSION_CODES.N)
-        public void bind(List<FilterSortModel> models, FilterSortModel filterModel, int position) {
-            materialCheckBox.setText(filterModel.getName());
-
-            if (filterModel.isEnabled()) {
-                materialCheckBox.setChecked(true);
-                prevSelection = position;
-            } else {
-                materialCheckBox.setChecked(false);
-            }
-
-            materialCheckBox.setOnCheckedChangeListener(new CompoundButton.OnCheckedChangeListener() {
-                @Override
-                public void onCheckedChanged(CompoundButton buttonView, boolean isChecked) {
-                    if (isChecked) {
-                        models.get(position).setEnabled(true);
-                        if (prevSelection >= 0) {
-                            models.get(prevSelection).setEnabled(false);
-                            notifyItemChanged(prevSelection);
-                        }
-                        prevSelection = position;
-                    } else {
-                        models.get(position).setEnabled(false);
-                    }
-                    FilterSortModel filterSortModel = models.stream().filter(filterSortModel1 -> filterSortModel1.getId() == models.get(getAdapterPosition()).getId()).collect(Collectors.toList()).get(0);
-                    listener.onItemSelect(filterSortModel, getAdapterPosition(), AdapterAction.TOGGLE);
-                }
-            });
-
-        }
-    }
 
     public class ViewHolderFilter extends RecyclerView.ViewHolder implements AdapterItemListener<FilterSortModel> {
         private TextView title;
         private RecyclerView recyclerView;
         private FilterChildChoiceAdapter filterChildChoiceAdapter;
         private LinearLayoutManager linearLayoutManager;
+        private LinearLayout linFilterTitle;
         private ImageView imgArrow;
         private boolean isTouch = false;
 
@@ -173,19 +128,17 @@ public class FilterChoiceAdapter extends RecyclerView.Adapter<RecyclerView.ViewH
             title = view.findViewById(R.id.TV_filter_title);
             recyclerView = view.findViewById(R.id.RV_filter_list);
             imgArrow = view.findViewById(R.id.img_arrow);
+            linFilterTitle = view.findViewById(R.id.lin_filter_title);
             linearLayoutManager = new LinearLayoutManager(context, RecyclerView.VERTICAL, false);
             recyclerView.setLayoutManager(linearLayoutManager);
-
-
         }
 
         boolean collapseNotify = false;
 
-        @RequiresApi(api = Build.VERSION_CODES.N)
         public void bind(FilterSortModel filterModel) {
 
             title.setText(filterModel.getName());
-            imgArrow.setOnClickListener(view -> {
+            linFilterTitle.setOnClickListener(view -> {
 
 
                 if (!filterModel.isExpanded()) {
@@ -215,26 +168,20 @@ public class FilterChoiceAdapter extends RecyclerView.Adapter<RecyclerView.ViewH
 
         }
 
-        @RequiresApi(api = Build.VERSION_CODES.N)
         private void setList(FilterSortModel filterModel) {
 
-            List<FilterSortModel> filterSortModels = allFilters.stream().filter(new Predicate<FilterSortModel>() {
-                @Override
-                public boolean test(FilterSortModel filterSortModel) {
-                    return filterModel.getId() == filterSortModel.getParent_id();
-                }
-            }).collect(Collectors.toList());
+            List<FilterSortModel> filterSortModels = Observable.fromIterable(allFilters).filter(filterSortModel -> filterModel.getId() == filterSortModel.getParent_id()).toList().blockingGet();
 
             filterChildChoiceAdapter = new FilterChildChoiceAdapter(context, filterSortModels, this);
             recyclerView.setAdapter(filterChildChoiceAdapter);
         }
 
-        @RequiresApi(api = Build.VERSION_CODES.N)
         @Override
         public void onItemSelect(FilterSortModel model, int position, AdapterAction Action) {
-            switch (Action) {
+            switch (Action)
+            {
                 case TOGGLE:
-                    FilterSortModel filterSortModel = allFilters.stream().filter(filterSortModel1 -> filterSortModel1.getId() == model.getId()).collect(Collectors.toList()).get(0);
+                    FilterSortModel filterSortModel = Observable.fromIterable(allFilters).filter(filterSortModel1 -> filterSortModel1.getId() == model.getId()).blockingFirst();
                     if (model.isEnabled()) {
                         filterSortModel.setEnabled(false);
                     } else {
@@ -243,21 +190,26 @@ public class FilterChoiceAdapter extends RecyclerView.Adapter<RecyclerView.ViewH
                     listener.onItemSelect(filterSortModel, position, AdapterAction.SELECT);
                     break;
             }
-
         }
     }
 
 
     public class ViewHolderFilterSlider extends RecyclerView.ViewHolder {
         private TextView sliderTitle;
-        private RangeSlider rangeSlider;
+        private TextView sliderMax;
+        private TextView sliderMin;
+        private PersianRangeSlider simpleRangeView;
 
 
-        @RequiresApi(api = Build.VERSION_CODES.N)
         public ViewHolderFilterSlider(View view) {
             super(view);
             sliderTitle = view.findViewById(R.id.TV_slider_title);
-            rangeSlider = view.findViewById(R.id.Slider_range_identifier);
+            sliderMax = view.findViewById(R.id.TV_slider_max);
+            sliderMin = view.findViewById(R.id.TV_slider_min);
+            simpleRangeView = view.findViewById(R.id.range_slider);
+            simpleRangeView.addOnSliderTouchListener(sliderTouchListener);
+            sliderMin.setText(String.format("%1$s%2$s%3$s",context.getString(R.string.from),"1000","ريال"));
+            sliderMax.setText(String.format("%1$s%2$s%3$s",context.getString(R.string.to),"800000","ريال"));
 
         }
 
@@ -265,6 +217,18 @@ public class FilterChoiceAdapter extends RecyclerView.Adapter<RecyclerView.ViewH
             sliderTitle.setText(filterModel.getName());
 
         }
+
+        RangeSlider.OnSliderTouchListener sliderTouchListener = new RangeSlider.OnSliderTouchListener() {
+            @Override
+            public void onStartTrackingTouch(@NonNull RangeSlider slider) {
+            }
+
+            @Override
+            public void onStopTrackingTouch(@NonNull RangeSlider slider) {
+                sliderMin.setText(String.format("%1$s%2$s%3$s",context.getString(R.string.from),slider.getValues().get(0).intValue(),"ريال"));
+                sliderMax.setText(String.format("%1$s%2$s%3$s",context.getString(R.string.to),slider.getValues().get(1).intValue(),"ريال"));
+            }
+        };
     }
 
 
